[modernize] Use standard charsets utf-8
- replacing source hard coded value for utf-8 which is likely somewhat costly along with removal of try no longer needed
- adding missing utf-8 charset for unit test