@@ -21,7 +21,7 @@ import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.io.UnsupportedEncodingException;
+import java.nio.charset.StandardCharsets;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLEncoder;
@@ -268,11 +268,7 @@ public class DefaultVFS extends VFS {
 
         // File name might be URL-encoded
         if (!file.exists()) {
-          try {
-            file = new File(URLEncoder.encode(jarUrl.toString(), "UTF-8"));
-          } catch (UnsupportedEncodingException e) {
-            throw new RuntimeException("Unsupported encoding?  UTF-8?  That's impossible.");
-          }
+          file = new File(URLEncoder.encode(jarUrl.toString(), StandardCharsets.UTF_8));
         }
 
         if (file.exists()) {
